# rust_grpc_poc

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
movie-service/: Cargo.toml  build.rs
movie-service/src/: config.rs  db.rs  lib.rs  movie.rs  service.rs
movie-service/src/types/: dtos.rs  mod.rs
movie-service/tests/: init_db.rs  integration_tests.rs
proto/: movie.proto
script/: add_movie.sh  delete_movie.sh  edit_movie.sh  fetch_movies.sh
scripts/: add_movie.sh  delete_movie.sh  edit_movie.sh
src/: config.rs  db.rs  grpc.rs  main.rs  movie.rs
