[package]
name = "movies-rust-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tonic-web = "0.9.2"
dotenv = "0.15.0"
mongodb = "2.6.0"
futures = { version = "0.3", default-features = false, features = ["async-await"] }


[build-dependencies]
tonic-build = "0.8"
