[workspace]
members = ["movie-service"]

# The resolver is a global setting for a workspace, and the setting is ignored
# in dependencies. The setting is only honored for the top-level package of the
# workspace. Given that we are using a workspace, we need to explicitly set the
# resolver field if we want to opt-in to the new resolver.
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Kristi Fidani"]

[workspace.dependencies]
dotenvy = { version = "0.15", default-features = false }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
