[package]
version.workspace = true
edition.workspace = true
authors.workspace = true

name = "movie-grpc-service"
description = "A gRPC service for managing movies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# unique deps
prost = { version = "0.13", default-features = false }
prost-types = { version = "0.13", default-features = false }
tonic = { version = "0.12", default-features = false, features = [
    "transport",
    "codegen",
    "prost",
] }
tokio-postgres = "0.7.10"

# workspace deps
dotenvy = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.12", default-features = false, features = [
    "transport",
    "prost",
] }

[dev-dependencies]
tokio-stream = { version = "0.1.14", default-features = false }
hyper-util = { version = "0.1.16", features = ["tokio"] }
tower = { version = "0.5", default-features = false }


[package.metadata.cargo-machete]
# these are not used directly but are needed for the `Trait` implementations
ignored = ["prost", "prost-types"]

[[bin]]
name = "movie-grpc-service"
path = "bin/main.rs"
